<resources>
    <string name="app_name">EvapoCalc</string>
    <string name="instruction">Marque aqui as variáveis disponíveis para o cálculo da evapotranspiração:</string>
    <string name="tVtemperature">Temperatura</string>
    <string name="tVisolation">Isolação</string>
    <string name="tVradiation">Radiação</string>
    <string name="tVheatSoil">Fluxo no Solo</string>
    <string name="tVhumidity">Umidade</string>
    <string name="tVwindSpeed">Velocidade do Vento</string>
    <string name="tVContinue">Continuar</string>
    <string name="tVHelp">Ajuda</string>
    <string name="tVprivacyPolicy">Política de Privacidade</string>
    <string name="title_activity_variable_list">EvapoCalc</string>
    <string name="obter_dados_do_gps">Obter dados do GPS</string>
    <string name="tvAltitude">Altitude(m)</string>
    <string name="tvLatitude">Latitude</string>
    <string name="tvFotoperiodo">Fotopériodo (h)</string>
    <string name="tvDiasDoMes">Dias do Mês</string>
    <string name="tvTempMed">Temperatura Média (°C)</string>
    <string name="tvTemOrvalho">Temp. Orvalho (°C) </string>
    <string name="tvTempMaxima">Temp. Máxima (°C)</string>
    <string name="tvTempMinima">Temp. Mínima(°C)</string>
    <string name="tvTempNormal">Temp.Normal(°C)</string>
    <string name="tvisolacao">Isolação(%)</string>
    <string name="tvQo">Qo (mm/dia)</string>
    <string name="tvRn">Rn (Mj/m²dia)</string>
    <string name="tvG">G (Mj/m²dia)</string>
    <string name="tvUmidadeRelativa">Umidade Relativa(méd %)</string>
    <string name="tvVelocidaVendo">Velocidade do Vendo(m/s)</string>
    <string name="h_s">H.S.</string>
    <string name="hargreavesSamani">Hargreave Samani</string>
    <string name="calcular">Calcular</string>
    <string name="linacre">Linacre</string>
</resources>
