<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thunkable.android.diogo_borbar.EvapoCalc.MainActivity">

    <TextView
        android:id="@+id/textViewInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/instruction"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/checkBoxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tVtemperature"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewInstruction"
        app:layout_constraintStart_toStartOf="@+id/textViewInstruction"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstruction" />

    <CheckBox
        android:id="@+id/checkBoxIso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tVisolation"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxTemp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTemp" />

    <CheckBox
        android:id="@+id/checkBoxRad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tVradiation"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxIso"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxIso" />

    <CheckBox
        android:id="@+id/checkBoxFlux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tVheatSoil"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRad"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRad" />

    <CheckBox
        android:id="@+id/checkBoxHum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tVhumidity"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxFlux"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFlux" />

    <CheckBox
        android:id="@+id/checkBoxVel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tVwindSpeed"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxHum"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHum" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewInstruction"
        app:layout_constraintStart_toStartOf="@+id/textViewInstruction"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxVel">

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tVContinue"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tVHelp"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="proximaTela"
        android:text="@string/tVprivacyPolicy"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>
